--- a/style/style.css
+++ b/style/style.css
@@ -7,12 +7,12 @@ body{
 	padding:70px;
 	position:relative;
 }
-#dynamic{
+.table{
 	text-align:center;
 	float:left;
 	border:1px solid #48aae6;
 }
-#dynamic td{
+.table td{
 	border-spacing:2px;
 	border:1px solid #fff;
 	width:60px;
